--- a/templates/autoscale-main.template
+++ b/templates/autoscale-main.template
@@ -36,11 +36,11 @@
             "ConstraintDescription": "must only contain uppercase and lowercase letters and digits",
             "Description": "An automatically generated random string as a unique ID for all resources in the deployment stack and nested stacks."
         },
-        "VpcId": {
+        "VPCID": {
             "Type": "AWS::EC2::VPC::Id",
             "Description": "The ID of the existing VPC where FortiGate Autoscale will be deployed. The VPC must have the option 'DNS hostnames' enabled and each of the two AZs in the VPC must have at least 1 public subnet and at least 1 private subnet."
         },
-        "VpcCidr": {
+        "VPCCIDR": {
             "Type": "String",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format.",
@@ -169,7 +169,7 @@
             "ConstraintDescription": "must be a valid port number between 1 and 65535.",
             "Description": "A port number for FortiGate administration. Minimum is 1. Maximum is 65535. Do not use the FortiGate reserved ports 443, 541, 514, or 703."
         },
-        "FortiGateAdminCidr": {
+        "FortiGateAdminCIDR": {
             "Type": "String",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format and 0.0.0.0/0 is highly not recommended.",
@@ -237,7 +237,7 @@
             "Default": "add a new internal load balancer",
             "AllowedValues": [
                 "add a new internal load balancer",
-                "use a load balancer specified below",
+                "use the load balancer specified below",
                 "do not need one"
             ],
             "ConstraintDescription": "must choose from the provided options.",
@@ -251,7 +251,7 @@
             "ConstraintDescription": "This path must begin with a '/' character, and can be at most 1024 characters in length.",
             "Description": "Optional. The destination path for health checks. This path must begin with a '/' character, and can be at most 1024 characters in length."
         },
-        "InternalLoadBalancerDnsName": {
+        "InternalLoadBalancerDNSName": {
             "Type": "String",
             "Default": "",
             "Description": "Optional. Specify the DNS Name of an existing internal load balancer used to route traffic from a FortiGate to targets in a specified target group. Leave it blank if you don't use an existing load balancer."
@@ -289,13 +289,13 @@
             "MaxLength": 128,
             "Description": "The password for the 'Autoscale admin' above. The password requirement conforms to the FortiAnalyzer password policy. Please see the documentation for more information if you need to enable KMS encryption. Min length is 8 and Max length 128."
         },
-        "FortiAnalyzerCustomPrivateIpAddress": {
+        "FortiAnalyzerCustomPrivateIPAddress": {
             "Type": "String",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}$",
             "ConstraintDescription": "must be a valid IPv4 format.",
             "Description": "The static private IP address allocated for the FortiAnalyzer in the designated subnet."
         },
-        "IntegratedNatGatewayOptions": {
+        "IntegratedNATGatewayOptions": {
             "Type": "String",
             "AllowedValues": ["yes", "no"],
             "Description": "Make the master FortiGate in the Auto Scaling group as the NAT Gateway for egress traffic from the protected private subnets."
@@ -393,7 +393,7 @@
         "IfUseIntegratedEgressNatGw": {
             "Fn::Equals": [
                 {
-                    "Ref": "IntegratedNatGatewayOptions"
+                    "Ref": "IntegratedNATGatewayOptions"
                 },
                 "yes"
             ]
@@ -667,7 +667,7 @@
             "Properties": {
                 "GroupDescription": "FortiGate security group",
                 "VpcId": {
-                    "Ref": "VpcId"
+                    "Ref": "VPCID"
                 },
                 "Tags": [
                     {
@@ -701,7 +701,7 @@
                 },
                 "IpProtocol": "-1",
                 "CidrIp": {
-                    "Ref": "VpcCidr"
+                    "Ref": "VPCCIDR"
                 }
             }
         },
@@ -715,7 +715,7 @@
                 "FromPort": "22",
                 "ToPort": "22",
                 "CidrIp": {
-                    "Ref": "FortiGateAdminCidr"
+                    "Ref": "FortiGateAdminCIDR"
                 }
             }
         },
@@ -729,7 +729,7 @@
                 "FromPort": "541",
                 "ToPort": "541",
                 "CidrIp": {
-                    "Ref": "VpcCidr"
+                    "Ref": "VPCCIDR"
                 }
             }
         },
@@ -743,7 +743,7 @@
                 "FromPort": "514",
                 "ToPort": "514",
                 "CidrIp": {
-                    "Ref": "VpcCidr"
+                    "Ref": "VPCCIDR"
                 }
             }
         },
@@ -757,7 +757,7 @@
                 "FromPort": "514",
                 "ToPort": "514",
                 "CidrIp": {
-                    "Ref": "VpcCidr"
+                    "Ref": "VPCCIDR"
                 }
             }
         },
@@ -775,7 +775,7 @@
                     "Ref": "FortiGateAdminPort"
                 },
                 "CidrIp": {
-                    "Ref": "FortiGateAdminCidr"
+                    "Ref": "FortiGateAdminCIDR"
                 }
             }
         },
@@ -810,7 +810,7 @@
             "Properties": {
                 "VpcEndpointType": "Interface",
                 "VpcId": {
-                    "Ref": "VpcId"
+                    "Ref": "VPCID"
                 },
                 "SubnetIds": [
                     {
@@ -914,7 +914,7 @@
                         "Ref": "LoadBalancingHealthCheckThreshold"
                     },
                     "VpcId": {
-                        "Ref": "VpcId"
+                        "Ref": "VPCID"
                     },
                     "FgtSubnetIds": {
                         "Fn::Join": [
@@ -1177,7 +1177,7 @@
                     ]
                 },
                 "FortiGateAutoscaleVpcId": {
-                    "Ref": "VpcId"
+                    "Ref": "VPCID"
                 },
                 "FortiGateAutoscaleSubnet1": {
                     "Ref": "PublicSubnet1"
@@ -1301,11 +1301,11 @@
                         {
                             "Fn::GetAtt": [
                                 "StackCreateLoadBalancingComponents",
-                                "Outputs.InternalLoadBalancerDnsName"
+                                "Outputs.InternalLoadBalancerDNSName"
                             ]
                         },
                         {
-                            "Ref": "InternalLoadBalancerDnsName"
+                            "Ref": "InternalLoadBalancerDNSName"
                         }
                     ]
                 },
@@ -1389,10 +1389,10 @@
                         "Fn::GetAtt": ["StackCreateDynamoDBTable", "Outputs.TableArnList"]
                     },
                     "VpcId": {
-                        "Ref": "VpcId"
+                        "Ref": "VPCID"
                     },
                     "VPCCIDR": {
-                        "Ref": "VpcCidr"
+                        "Ref": "VPCCIDR"
                     },
                     "VPCEndpoint": {
                         "Ref": "FgtAsgVpcEndpoint"
@@ -1407,7 +1407,7 @@
                         "Ref": "FortiAnalyzerVersion"
                     },
                     "AdminCidr": {
-                        "Ref": "FortiGateAdminCidr"
+                        "Ref": "FortiGateAdminCIDR"
                     },
                     "KeyPairName": {
                         "Ref": "KeyPairName"
@@ -1451,7 +1451,7 @@
                         "Fn::If": [
                             "IfIntegrateFortiAnalyzer",
                             {
-                                "Ref": "FortiAnalyzerCustomPrivateIpAddress"
+                                "Ref": "FortiAnalyzerCustomPrivateIPAddress"
                             },
                             ""
                         ]
@@ -1573,14 +1573,14 @@
                         "default": "Network configuration"
                     },
                     "Parameters": [
-                        "VpcCidr",
-                        "VpcId",
+                        "VPCCIDR",
+                        "VPCID",
                         "PublicSubnet1",
                         "PublicSubnet2",
                         "PrivateSubnet1",
                         "PrivateSubnet2",
                         "PrivateSubnetRouteTable",
-                        "IntegratedNatGatewayOptions"
+                        "IntegratedNATGatewayOptions"
                     ]
                 },
                 {
@@ -1592,7 +1592,7 @@
                         "FortiOSVersion",
                         "FortiGatePskSecret",
                         "FortiGateAdminPort",
-                        "FortiGateAdminCidr",
+                        "FortiGateAdminCIDR",
                         "KeyPairName"
                     ]
                 },
@@ -1626,7 +1626,7 @@
                         "LoadBalancingHealthCheckThreshold",
                         "InternalLoadBalancingOptions",
                         "InternalTargetGroupHealthCheckPath",
-                        "InternalLoadBalancerDnsName"
+                        "InternalLoadBalancerDNSName"
                     ]
                 },
                 {
@@ -1674,7 +1674,7 @@
                 "UniqueId": {
                     "default": "Unique ID"
                 },
-                "VpcCidr": {
+                "VPCCIDR": {
                     "default": "VPC CIDR"
                 },
                 "PublicSubnet1": {
@@ -1734,7 +1734,7 @@
                 "FortiGateAdminPort": {
                     "default": "Admin port"
                 },
-                "FortiGateAdminCidr": {
+                "FortiGateAdminCIDR": {
                     "default": "Admin CIDR block"
                 },
                 "KeyPairName": {
@@ -1770,7 +1770,7 @@
                 "InternalTargetGroupHealthCheckPath": {
                     "default": "Health check path"
                 },
-                "InternalLoadBalancerDnsName": {
+                "InternalLoadBalancerDNSName": {
                     "default": "Internal ELB DNS name"
                 },
                 "GetLicenseGracePeriod": {
@@ -1791,7 +1791,7 @@
                 "FortiAnalyzerAutoscaleAdminPassword": {
                     "default": "Autoscale admin password"
                 },
-                "IntegratedNatGatewayOptions": {
+                "IntegratedNATGatewayOptions": {
                     "default": "Integrated NAT Gateway"
                 }
             }
