--- a/templates/create-new-vpc.template
+++ b/templates/create-new-vpc.template
@@ -13,28 +13,28 @@
             "ConstraintDescription": "must be a valid CIDR block format.",
             "Description": "The CIDR block for the new VPC."
         },
-        "PublicSubnet1Cidr": {
+        "PublicSubnet1CIDR": {
             "Type": "String",
             "Default": "10.0.0.0/24",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format.",
             "Description": "The CIDR block for the public facing subnet located in Availability Zone 1."
         },
-        "PublicSubnet2Cidr": {
+        "PublicSubnet2CIDR": {
             "Type": "String",
             "Default": "10.0.2.0/24",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format.",
             "Description": "The CIDR block for the public facing subnet located in Availability Zone 2."
         },
-        "PrivateSubnet1Cidr": {
+        "PrivateSubnet1CIDR": {
             "Type": "String",
             "Default": "10.0.1.0/24",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format.",
             "Description": "The CIDR block for the private subnet located in Availability Zone 1 where it is protected by the FortiGates in public subnet in the same AZ."
         },
-        "PrivateSubnet2Cidr": {
+        "PrivateSubnet2CIDR": {
             "Type": "String",
             "Default": "10.0.3.0/24",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
@@ -108,7 +108,7 @@
             "Type": "AWS::EC2::Subnet",
             "Properties": {
                 "CidrBlock": {
-                    "Ref": "PublicSubnet1Cidr"
+                    "Ref": "PublicSubnet1CIDR"
                 },
                 "AvailabilityZone": {
                     "Fn::Select": [
@@ -149,7 +149,7 @@
             "Type": "AWS::EC2::Subnet",
             "Properties": {
                 "CidrBlock": {
-                    "Ref": "PublicSubnet2Cidr"
+                    "Ref": "PublicSubnet2CIDR"
                 },
                 "AvailabilityZone": {
                     "Fn::Select": [
@@ -348,7 +348,7 @@
             "Condition": "NeedPairedPrivateSubnet",
             "Properties": {
                 "CidrBlock": {
-                    "Ref": "PrivateSubnet1Cidr"
+                    "Ref": "PrivateSubnet1CIDR"
                 },
                 "AvailabilityZone": {
                     "Fn::Select": [
@@ -390,7 +390,7 @@
             "Condition": "NeedPairedPrivateSubnet",
             "Properties": {
                 "CidrBlock": {
-                    "Ref": "PrivateSubnet2Cidr"
+                    "Ref": "PrivateSubnet2CIDR"
                 },
                 "AvailabilityZone": {
                     "Fn::Select": [
@@ -556,28 +556,28 @@
                 ]
             }
         },
-        "PublicSubnet1Cidr": {
+        "PublicSubnet1CIDR": {
             "Description": "Public Subnet 1 CIDR",
             "Value": {
-                "Ref": "PublicSubnet1Cidr"
+                "Ref": "PublicSubnet1CIDR"
             }
         },
-        "PublicSubnet2Cidr": {
+        "PublicSubnet2CIDR": {
             "Description": "Public Subnet 2 CIDR",
             "Value": {
-                "Ref": "PublicSubnet2Cidr"
+                "Ref": "PublicSubnet2CIDR"
             }
         },
-        "PrivateSubnet1Cidr": {
+        "PrivateSubnet1CIDR": {
             "Description": "Private Subnet 1 CIDR",
             "Value": {
-                "Ref": "PrivateSubnet1Cidr"
+                "Ref": "PrivateSubnet1CIDR"
             }
         },
-        "PrivateSubnet2Cidr": {
+        "PrivateSubnet2CIDR": {
             "Description": "Private Subnet 2 CIDR",
             "Value": {
-                "Ref": "PrivateSubnet2Cidr"
+                "Ref": "PrivateSubnet2CIDR"
             }
         }
     }
